--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@ html, body, #canvas {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	height: 100%;
 }
 
 body {
 	color: white;
 	background-color: black;
 	overflow: hidden;
-	touch-action: manipulation;
-	overscroll-behavior: contain;
+	touch-action: none;
 }
 
 #canvas {
 	display: block;
-	width: 100vw;
-	height: 100vh;
 }
 
 #canvas:focus {
@@ -115,7 +111,7 @@ body {
 
 		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":31232,"index.wasm":36160334},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":194756,"index.wasm":36160334},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
